--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -3,21 +3,29 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.2",
+    "exif-js": "^2.3.0",
     "jimp": "^0.22.10",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-easy-crop": "^5.0.2",
+    "react-exif-orientation-img": "^0.1.5",
     "react-icons": "^4.12.0",
     "react-image-crop": "^11.0.1",
+    "react-image-file-resizer": "^0.4.8",
+    "react-image-gallery": "^1.3.0",
     "react-modal": "^3.16.1",
+    "react-reorder": "^3.0.0-alpha.7",
     "react-router": "^6.20.1",
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.3",
     "tesseract.js": "^5.0.3",
     "web-vitals": "^2.1.4"
