--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -8,18 +8,11 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.2",
-   
-
     "react": "^18.2.0",
-
     "react-beautiful-dnd": "^13.1.1",
-
     "react-dom": "^18.2.0",
-
     "react-dropzone": "^14.2.3",
-  
     "react-icons": "^4.12.0",
-    
     "react-modal": "^3.16.1",
     "react-reorder": "^3.0.0-alpha.7",
     "react-router": "^6.20.1",
@@ -27,6 +20,7 @@
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.3",
+    "string-similarity": "^4.0.4",
     "tesseract.js": "^5.0.3",
     "web-vitals": "^2.1.4"
   },
