--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.6.2",
     "browser-image-compression": "^2.0.2",
     "react": "^18.2.0",
+    "react-autosuggest": "^10.1.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
