--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-icons": "^4.12.0",
+    "react-loader-spinner": "^5.4.5",
     "react-modal": "^3.16.1",
     "react-reorder": "^3.0.0-alpha.7",
     "react-router": "^6.20.1",
