--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -23,6 +23,7 @@
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.3",
+    "react-webcam": "^7.2.0",
     "string-similarity": "^4.0.4",
     "tesseract.js": "^5.0.3",
     "web-vitals": "^2.1.4"
