--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -9,10 +9,10 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.2",
     "browser-image-compression": "^2.0.2",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-autosuggest": "^10.1.0",
     "react-beautiful-dnd": "^13.1.1",
-   
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-icons": "^4.12.0",
@@ -24,7 +24,6 @@
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.3",
-    
     "string-similarity": "^4.0.4",
     "tesseract.js": "^5.0.3",
     "web-vitals": "^2.1.4"
