new placements blogs

--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -9,15 +9,19 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.2",
     "browser-image-compression": "^2.0.2",
+    "draft-js": "^0.11.7",
     "lodash": "^4.17.21",
+    "marked": "^12.0.1",
     "react": "^18.2.0",
     "react-autosuggest": "^10.1.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-dropzone": "^14.2.3",
     "react-icons": "^4.12.0",
     "react-loader-spinner": "^5.4.5",
     "react-modal": "^3.16.1",
+    "react-quill": "^2.0.0",
     "react-reorder": "^3.0.0-alpha.7",
     "react-router": "^6.20.1",
     "react-router-dom": "^6.20.1",
