--- a/Backend/package.json
+++ b/Backend/package.json
@@ -5,26 +5,21 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-   
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
-   
     "express": "^4.18.2",
     "gridfs-stream": "^1.1.1",
-  
-    
     "mailparser": "^3.6.5",
     "mongodb": "^5.6.0",
     "mongoose": "^7.6.6",
-   
     "uuid": "^9.0.1",
-    "vercel": "^32.6.1"
-  
+    "vercel": "^32.6.1",
+    "zlib": "^1.0.5"
   }
 }
