--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-draft-wysiwyg": "^1.15.0",
     "react-dropzone": "^14.2.3",
+    "react-ga4": "^2.1.0",
     "react-icons": "^4.12.0",
     "react-loader-spinner": "^5.4.5",
     "react-modal": "^3.16.1",
